maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:21: error: illegal start of simple expression
  }
  ^