maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  
  var x:Int = 0
  var y:Int = 0
  
  for (i<- 0 to getMondeHauteur()){
    for (j<- 0 to getMondeLargeur()){
      if (aBiscuit(j,i)==true){x=j;y=i}  // trouve le Baggle
    }
  }
  
  var cpt:Int =0
  
  setIndication(x,y,cpt) // note "0" sur le finish
  cpt=1
  
  
  while (!arret){    // numérote 
    if (!aMurNord())
  }

  
    // Your code here
}



def arret:Boolean={  // test si on a numeroté la case du buggle
  if (getIndication(getX(),getY())==9999){
    return false
  }
  return true 
}

def aMurSud(x:Int,y:Int):Boolean = {  // test mur au SUD
  if (aMurNord(x,y+1)==true){return true}
  return false
}
def aMurEst(x:Int,y:Int):Boolean = {   // test mur à l'EST
  if (aMurOuest(x+1,y)==true){return true}
  return false
}